#1084 Upgrade to spring boot 3.x
Signed-off-by: Lukáš Vasek <bilaak@gmail.com>